name:               dawg-ord
version:            0.11
synopsis:           Directed acyclic word graphs
description:
    A version of the dawg library which doesn't require Enum
    instance over the underlying alphabet.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2015 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Data, Data Structures
homepage:           https://github.com/kawu/dawg-ord
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base >= 4 && < 5
      , containers >= 0.4.1 && < 0.6
      , binary
      , vector
      , vector-binary
      , mtl
      , transformers

    exposed-modules:
        Data.DAWG.Dynamic
      , Data.DAWG.Static

    other-modules:
        Data.DAWG.Types
      , Data.DAWG.Static.Node
      , Data.DAWG.Dynamic.Internal
      , Data.DAWG.Dynamic.Node
      , Data.DAWG.Graph
      , Data.DAWG.Trans
      , Data.DAWG.Trans.Vector
      , Data.DAWG.Trans.Map
      , Data.DAWG.Trans.Hashed
      , Data.DAWG.HashMap
      , Data.DAWG.Util

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: https://github.com/kawu/dawg-ord.git
