name:               dawg-ord
version:            0.1
synopsis:           Directed acyclic word graphs
description:
    A version of the dawg library which doesn't require Enum
    instance over the underlying alphabet.
    .
    The library implements /directed acyclic word graphs/ (DAWGs) internally
    represented as /minimal acyclic deterministic finite-state automata/.
    .
    The "Data.DAWG.Dynamic" module provides fast insert and delete operations
    which can be used to build the automaton on-the-fly.  The automaton from
    the "Data.DAWG.Static" module has lower memory footprint and provides
    static hashing functionality.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2015 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Data, Data Structures
homepage:           https://github.com/kawu/dawg-ord
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base            >= 4 && < 5
      , containers      >= 0.4.1 && < 0.6
      , binary
      , vector
      , vector-binary
      , mtl
      , transformers
      -- , monad-atom      >= 0.4  && < 0.5

    exposed-modules:
        Data.DAWG.Gen.Types
      , Data.DAWG.Int.Dynamic
      , Data.DAWG.Ord.Dynamic
--       , Data.DAWG.Ord.Static

    other-modules:
        Data.DAWG.Int.Static.Node
      , Data.DAWG.Int.Dynamic.Internal
      , Data.DAWG.Int.Dynamic.Node
      , Data.DAWG.Gen.Graph
      , Data.DAWG.Gen.Trans
      , Data.DAWG.Gen.Trans.Vector
      , Data.DAWG.Gen.Trans.Map
      , Data.DAWG.Gen.Trans.Hashed
      , Data.DAWG.Gen.HashMap
      , Data.DAWG.Gen.Util

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: https://github.com/kawu/dawg-ord.git
